# Alpha-Factory

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
paper/: one_pager.md
src/alpha_factory_pro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/alphafactory/: config.py  labels.py  run.py
src/alphafactory/allocator/: online_alm.py
src/alphafactory/features/: factors.py  operators.py
src/alphafactory/metrics/: ic.py
src/alphafactory/portfolio/: longshort.py
src/alphafactory/reports/: report.py
src/alphafactory/validation/: splits.py
tests/: test_allocator.py  test_no_lookahead.py  test_portfolio.py  test_splits.py
